src/user.css
/* ... */
/* Home Header */
.main-home-homeHeader {
  background-image: var(--background-noise);
  -webkit-mask-image: linear-gradient(var(--main-color) 0, transparent 100%);
  mask-image: linear-gradient(var(--main-color) 0, transparent 100%);
}

/* Filter chips */
.main-home-filterChipsSection {
  background-color: var(--filter-chips-bg-color) !important;
  -webkit-backdrop-filter: blur(var(--filter-chips-bg-blur)) saturate(var(--filter-chips-bg-saturation));
  backdrop-filter: blur(var(--filter-chips-bg-blur)) saturate(var(--filter-chips-bg-saturation));
}

.main-home-filterChipsSection:after {
  background-color: rgba(var(--spice-rgb-shadow), .25) !important;
}

/* Image section (Playlist and Artist) */
.main-entityHeader-container {
  background: var(--background-noise);
}

.under-main-view .main-entityHeader-overlay,
.main-entityHeader-background.main-entityHeader-gradient,
.main-entityHeader-background {
  background-color: transparent;
  transform: translateY(calc(var(--scroll-top)* -1)) !important;
  transition: backdrop-filter .3s ease-in-out;
}

.main-entityHeader-overlay {
  border: none !important;
}

.main-entityHeader-overlay:after {
  display: none;
  background-color: transparent !important;
  background: none !important;
}

.under-main-view .main-entityHeader-overlay {
  -webkit-animation: background-blur-anim 1s linear;
  -webkit-animation-delay: calc(var(--scroll-coefficient, var(--scroll))* -1s);
  -webkit-animation-fill-mode: both;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-play-state: paused;
  -webkit-transition: -webkit-backdrop-filter 0.3s ease;
  animation: background-blur-anim 1s linear;
  animation-delay: calc(var(--scroll-coefficient, var(--scroll)) * -1s);
  animation-fill-mode: both;
  animation-iteration-count: 1;
  animation-play-state: paused;
  opacity: 1;
  transition: backdrop-filter 0.3s ease;
  background: none;
  background-image: none !important;
}

@keyframes background-blur-anim {

  80%,
  100% {
    -webkit-backdrop-filter: blur(var(--blur-2xl, 2rem)) brightness(75%);
    backdrop-filter: blur(var(--blur-2xl, 2rem)) brightness(75%);
  }
}

.main-actionBarBackground-background,
.main-entityHeader-background,
.main-entityHeader-backgroundColor {
  background-color: rgba(var(--spice-rgb-card), 0.25) !important;
  border-bottom: var(--default-border);
}

.main-actionBarBackground-background {
  background-image: var(--background-noise);
  -webkit-mask-image: linear-gradient(var(--main-color) 0, transparent 100%);
  mask-image: linear-gradient(var(--main-color) 0, transparent 100%);
}


.main-entityHeader-background,
.main-entityHeader-container {
  height: calc(100vh - var(--now-playing-bar-height) - (1rem * 5)) !important;
}

.D6IunHuzuULf_Sr88GOA,
.playlist-playlist-playlist {
  margin-top: 0 !important;
}

.main-entityHeader-container.main-entityHeader-nonWrapped {
  height: min(40vh, var(--fluid-height)) !important;
  max-height: 400px;
  min-height: 35vh;
}

.main-nowPlayingView-aboutArtistV2Bio {
  text-wrap: balance;
}

/* Now playing bar */
.Root__now-playing-bar {
  position: fixed;
  height: fit-content;
  width: calc(100% - (var(--panel-gap) * 2));
  bottom: var(--margin-bottom-now-playing-bar);
  left: var(--gap-md);
  right: var(--gap-md);
}

.main-nowPlayingBar-container {
  padding: var(--now-playing-bar-padding-y) var(--now-playing-bar-padding-x);
  background-color: var(--now-playing-bar-color);
  border: var(--default-border);
  border-radius: var(--border-radius-now-playing-bar);
  -webkit-backdrop-filter: opacity(var(--now-playing-bar-opacity)) blur(var(--now-playing-bar-blur)) saturate(var(--now-playing-saturation)) brightness(var(--now-playing-brightness)) contrast(var(--now-playing-contrast));
  backdrop-filter: opacity(var(--now-playing-bar-opacity)) blur(var(--now-playing-bar-blur)) saturate(var(--now-playing-saturation)) brightness(var(--now-playing-brightness)) contrast(var(--now-playing-contrast));
}

.main-nowPlayingBar-nowPlayingBar {
  height: var(--now-playing-bar-height);
}

.main-coverSlotCollapsed-container,
.main-coverSlotCollapsed-navAltContainer {
  aspect-ratio: 1/1;
}

.main-nowPlayingWidget-nowPlaying {
  gap: var(--gap-sm);
}

.HD9s7U5E1RLSWKpXmrqx {
  background: var(--card-color);
  border: var(--default-border);
  border-radius: calc(var(--card-border-radius)/2);
}

.cover-art-icon {
  color: rgba(var(--spice-text), 0.5);
}

/* Connect Bar */
.main-connectBar-connectBar {
  min-height: 2rem;
  padding: var(--padding-md);
  position: absolute;
  bottom: calc(var(--now-playing-bar-height) + var(--gap-xl));
  right: var(--gap-sm);
}

.main-connectBar-connectBar.main-connectBar-connected {
  background-color: rgba(var(--accent-color), 1);
  color: var(--spice-text);
}

/* Scroll Node */
.main-view-container__scroll-node-child-spacer {
  height: 0px;
}

div[data-testid="hpto-parent-container"] {
  padding: 0 !important;
}

.lyrics-lyrics-contentWrapper,
.main-view-container__scroll-node,
.nw2W4ZMdICuBo08Tzxg9

/* ADD: Right sidebar scroll node */
  {
  padding-bottom: calc(var(--now-playing-bar-height) + var(--gap-lg));
}

/* Notification */
.notistack-SnackbarContainer {
  padding-bottom: calc(var(--now-playing-bar-height));
}

/* Generic Modal */

.GenericModal__overlay {
  bottom: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.JnpOnFaQfrRIA2fYe88A

/* ADD: classes for artist popup */
  {
  max-height: 70vh !important;
}

.GenericModal__overlay {
  background-color: rgba(var(--spice-rgb-shadow),
      var(--generic-modal-bg-opacity));
}
/* ... */

